--- a/tours-and-travels-backend/pom.xml
+++ b/tours-and-travels-backend/pom.xml
@@ -16,6 +16,14 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -116,7 +124,7 @@
 			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 
 	</dependencies>
 
