--- a/tours-and-travels-backend/pom.xml
+++ b/tours-and-travels-backend/pom.xml
@@ -144,8 +144,8 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>3.1.2</version>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
 			</plugin>
 
 		</plugins>
