--- a/tours-and-travels-backend/pom.xml
+++ b/tours-and-travels-backend/pom.xml
@@ -20,10 +20,16 @@
 	<distributionManagement>
 		<repository>
 			<id>deploymentRepo</id>
-			<name>Nexus Repository</name>
+			<name>Nexus Release Repository</name>
 			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
 		</repository>
+		<snapshotRepository>
+			<id>deploymentRepoSnapshots</id>
+			<name>Nexus Snapshot Repository</name>
+			<url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
 	</distributionManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
