--- a/tours-and-travels-backend/pom.xml
+++ b/tours-and-travels-backend/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.toursandtravel</groupId>
 	<artifactId>tours-and-travels-backend</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>tours-and-travels-backend</name>
 	<description>Tours and Travel backend using Spring Boot</description>
 	<properties>
@@ -23,7 +23,7 @@
 			<name>Nexus Release Repository</name>
 			<url>http://192.168.33.10:8081/repository/maven-releases/</url>
 		</repository>
-		
+
 	</distributionManagement>
 
 	<dependencies>
